Update common-java-jpa to Spring Boot 4 / Hibernate 7 / Java 25
Refresh the JPA skill to the May 2026 stack baseline and tighten the
authoring structure.

Stack baseline:
- Spring Boot 4.0+ / Spring Framework 7.0+
- Spring Data JPA 4.0, Hibernate ORM 7.1+
- Jakarta Persistence 3.2 (Jakarta EE 11)
- Java 25 LTS, HikariCP 7.0

Content changes:
- Add a Pattern Selection Decision Tree at the top of SKILL.md covering
  entity design, relationship mapping, querying, persisting and optimizing
- Add Hibernate 7 features: @SoftDelete, StatelessSession bulk DML,
  Window<T> + ScrollPosition.keyset() pagination, QuerySpecification
- Update entity-design / relationships / performance / spring-data-jpa
  references to the new stack and link them with trigger-first call-outs
- Document virtual threads + JPA caveats and GraalVM native image guidance

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>